--- a/package.json
+++ b/package.json
@@ -37,5 +37,9 @@
   },
   "scripts": {
     "test": "grunt test"
+  },
+  "dependencies": {
+    "lodash": "^4.15.0",
+    "lowdb": "^0.13.1"
   }
 }
