--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "cati",
+  "name": "tuti",
   "version": "0.0.0",
   "dependencies": {
     "angular": "^1.4.0",
@@ -18,7 +18,7 @@
     "angular-mocks": "^1.4.0"
   },
   "appPath": "app",
-  "moduleName": "catiApp",
+  "moduleName": "tuti",
   "overrides": {
     "bootstrap": {
       "main": [
